# Patchy

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE-THIRD-PARTY.md  README.md  RELEASE-HISTORY.md  build-release.bat  latest_version.json  release-all.bat  upload-linux-to-rtsoft.bat  upload-mac-to-rtsoft.bat  upload-to-rtsoft.bat  upload-windows-to-rtsoft.bat  vcpkg.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PLUGIN_SDK.md  ROADMAP.md  TESTING.md  blend-modes.md  brushes.md  channels.md  code-organization.md  file-formats.md  filters.md  float-windows.md  gradients.md  import.md  legal-constraints.md  liquify.md  palette-mode.md  performance.md  platform.md  plugins.md  pr-review.md  ps-compat.md  refactor-backlog.md  release-process.md  resolution-units.md  scripting.md  selection-tools.md  smart-objects.md  style-presets.md  svg.md  testing.md  testy.md  text-tool.md  tools.md  ui-conventions.md  vector-tools.md  warp.md
packaging/: README.md
packaging/linux/: README.md  com.rtsoft.patchy.desktop  com.rtsoft.patchy.metainfo.xml  make-flatpak.sh
packaging/macos/: Info.plist.in  README.md  make-dmg.sh  patchy.icns
packaging/windows/: InstallPatchy.ps1  InstallPatchyLauncher.cs  PatchyWindowsInstaller.sed.in  README.md  UninstallPatchy.cs
scripts/: breakout.js  export-all-layers.js  generative-art.js  letter-physics.js  make-readme-screenshots.ps1  patchy.d.ts  run-tests.ps1  sync-local-psd-fixtures.ps1  watermark.js
scripts/bundled/: patchy.d.ts  scripting-guide.md
scripts/dev/: make-script-icons.js
scripts/remote/: build-and-test.sh  release-linux.bat  release-linux.ps1  release-mac.bat  release-mac.ps1  remote-build.ps1  setup-linux.sh  setup-mac.sh
src/app/: main.cpp  patchy.rc
src/color/: color_management.cpp  color_management.hpp
src/core/: adjustment_layer.cpp  adjustment_layer.hpp  blend_math.cpp  blend_math.hpp  brush_dynamics.cpp  brush_dynamics.hpp  brush_tip.cpp  brush_tip.hpp  contour_presets.cpp  contour_presets.hpp  document.cpp  document.hpp  document_channel.cpp  document_channel.hpp  document_geometry.cpp  document_path.cpp  document_path.hpp  gradient_presets.cpp  gradient_presets.hpp  layer.cpp  layer.hpp  layer_metadata.cpp  layer_metadata.hpp  layer_render_utils.cpp  layer_render_utils.hpp  layer_tree.cpp  layer_tree.hpp  liquify.cpp  liquify.hpp  magnetic_lasso.cpp  magnetic_lasso.hpp  palette.cpp  palette.hpp  palette_presets.cpp  palette_presets.hpp  path_fit.cpp  path_fit.hpp  pattern_presets.cpp  pattern_presets.hpp  pattern_resource.cpp  (+30 more)
src/filters/: builtin_filters.cpp  builtin_filters.hpp  filter_engine.cpp  filter_engine.hpp  filter_registry.cpp  filter_registry.hpp  filter_support.hpp  rgba_filter_staging.hpp  smart_filter_recipe_mapping.cpp  smart_filter_recipe_mapping.hpp  smart_filter_renderer.cpp  smart_filter_renderer.hpp
src/formats/: acv_curves_io.cpp  acv_curves_io.hpp  af_document_io.cpp  af_document_io.hpp  af_tree.cpp  af_tree.hpp  aseprite_document_io.cpp  aseprite_document_io.hpp  binary_le.hpp  bmp_document_io.cpp  bmp_document_io.hpp  document_flatten.cpp  document_flatten.hpp  format_file_io.cpp  format_file_io.hpp  format_registry.cpp  format_registry.hpp  gif_document_io.cpp  gif_document_io.hpp  heif_document_io.cpp  heif_document_io.hpp  heif_document_io_win.cpp  ico_document_io.cpp  ico_document_io.hpp  ilbm_document_io.cpp  ilbm_document_io.hpp  image_density_probe.cpp  image_density_probe.hpp  palette_io.cpp  palette_io.hpp  pcx_document_io.cpp  pcx_document_io.hpp  raw_document_io.cpp  raw_document_io.hpp  raw_tone.cpp  raw_tone.hpp  raw_white_balance.cpp  raw_white_balance.hpp  svg_document_io.hpp  svg_document_read.cpp  (+6 more)
src/plugins/: legacy_photoshop_adapter.cpp  legacy_photoshop_adapter.hpp  plugin_api.h  plugin_host.cpp  plugin_host.hpp
src/psd/: abr_reader.cpp  abr_reader.hpp  asl_io.cpp  asl_io.hpp  grd_io.cpp  grd_io.hpp  pat_reader.cpp  pat_reader.hpp  psd_adjustments.cpp  psd_binary.cpp  psd_binary.hpp  psd_channel_data.cpp  psd_descriptor.cpp  psd_descriptor.hpp  psd_document_io.cpp  psd_document_io.hpp  psd_filter_effects.cpp  psd_filter_effects.hpp  psd_image_resources.cpp  psd_io_common.cpp  psd_io_internal.hpp  psd_layer_effects.hpp  psd_layer_records.cpp  psd_layer_styles.cpp  psd_patterns.cpp  psd_patterns.hpp  psd_smart_objects.cpp  psd_smart_objects.hpp  psd_text_read.cpp  psd_text_runs.hpp  psd_text_write.cpp  psd_vector.cpp
src/render/: compositor.cpp  compositor.hpp  layer_compositor.hpp  layer_style_mask_ops.cpp  layer_style_mask_ops.hpp  tile_cache.cpp  tile_cache.hpp
src/support/: string_utils.hpp
src/ui/: action_icons.cpp  action_icons.hpp  adjustment_dialogs.cpp  app_credits.cpp  app_credits.hpp  app_settings.cpp  app_settings.hpp  background_workers.cpp  background_workers.hpp  blend_if_range_editor.cpp  blend_if_range_editor.hpp  blend_mode_ui.cpp  blend_mode_ui.hpp  brush_dynamics_popup.cpp  brush_dynamics_popup.hpp  brush_presets.cpp  brush_presets.hpp  brush_tip_library.cpp  brush_tip_library.hpp  brush_tip_manager_dialog.cpp  brush_tip_manager_dialog.hpp  brush_tip_picker.cpp  brush_tip_picker.hpp  canvas_widget.cpp  canvas_widget.hpp  canvas_widget_brush.cpp  canvas_widget_cursors.cpp  canvas_widget_draw_tools.cpp  canvas_widget_events.cpp  canvas_widget_guides.cpp  canvas_widget_move.cpp  canvas_widget_pen.cpp  canvas_widget_render.cpp  canvas_widget_selection.cpp  canvas_widget_selection_engines.cpp  canvas_widget_shared.cpp  canvas_widget_shared.hpp  canvas_widget_transform.cpp  canvas_widget_vector_tools.cpp  canvas_widget_view.cpp  (+183 more)
test-fixtures/abr/: NOTICE.txt  myer-settlement-brushes.abr  (+2 more)
tests/: curves_clipping_preview_tests.cpp  local_psd_fixtures.hpp  perf_tests.cpp  synthetic_dng.hpp  test_fonts.hpp  test_harness.hpp  test_main.cpp  ui_visual_tests.cpp
testy/: affinity_js.py  analyze.py  config.example.json  config.py  index.html  manifest.py  photopea_host.html  psd_sections.py  report.py  requirements.txt  serve.py  staging.py  start-testy.bat  testy.py
translations/: patchy_ja.ts
(+255 files in other folders)
